# yuren-baichuan-7b

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  NOTICE  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml
.github/workflows/: codeql.yml  docker.yml  lint.yml
apps/webui/: README.md  pyproject.toml
apps/webui/src/webui/: __init__.py  app.py  constants.py  overwrites.py  utils.py
apps/webui/src/webui/assets/: application.js  style.css
apps/yuren_trainer/: README.md  pyproject.toml
apps/yuren_trainer/config/: deepspeed_config.json  qlora.json
apps/yuren_trainer/src/yuren_trainer/: build_datasets.py  clip_sft.py  peft_trainer.py  text_sft.py  utils.py
data/: sft.dev.json
docs/: showcases.md
libs/yuren_core/: README.md  pyproject.toml
libs/yuren_core/src/yuren_core/: constants.py  errors.py  multimodal_llama.py
tools/merge_lora/: README.md  pyproject.toml
tools/merge_lora/src/merge_lora/: __main__.py
tools/prepare_base_model/: README.md  pyproject.toml
tools/prepare_base_model/src/prepare_base_model/: __main__.py
