[project]
name = "webui"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "NGB Office GPGPU Workstation#01", email = "gpgpu-1@corp.pleisto.com" }
]
dependencies = [
    "gradio==3.35.2",
    "mdtex2html>=1.2.0",
    "markdown>=3.5.1",
    "llama_index>=0.9.13",
    "pygments>=2.17.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
