[project]
name = "yuren-trainer"
version = "0.1.0"
description = "Add a short description here"
dependencies = [
    "peft @ git+https://github.com/huggingface/peft",
    "datasets>=2.15.0",
    "wandb>=0.16.0",
    "deepspeed>=0.12.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
